--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: bikeindex_test
+  database: bikeindex_test<%= ENV["TEST_ENV_NUMBER"] %>
 
 staging:
   adapter: postgresql
