--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/core": "^10.0.10",
     "@honeybadger-io/react": "^0.0.2",
     "@rails/webpacker": "^4.0.2",
+    "blueimp-file-upload": "^9.31.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
@@ -28,6 +29,7 @@
     "react-dom": "^16.8.5",
     "react-spinners": "^0.5.3",
     "sass": "^1.15.2",
+    "script-loader": "^0.7.2",
     "selectize": "^0.12.6"
   },
   "devDependencies": {
