--- a/spec/vcr_cassettes/TheftAlertsController/POST_/bikes/_bike_id/theft_alerts/given_the_payment_request_fails/redirects_to_the_bike_edit_page_with_a_flash_message.yml
+++ b/spec/vcr_cassettes/TheftAlertsController/POST_/bikes/_bike_id/theft_alerts/given_the_payment_request_fails/redirects_to_the_bike_edit_page_with_a_flash_message.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.stripe.com/v1/tokens
     body:
       encoding: UTF-8
-      string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2025&card[cvc]=314
+      string: card[number]=4000000000000002&card[exp_month]=12&card[exp_year]=2025&card[cvc]=314
     headers:
       User-Agent:
       - Stripe/v1 RubyBindings/3.3.2
@@ -23,7 +23,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 20 Jun 2019 14:32:56 GMT
+      - Sat, 22 Jun 2019 00:38:40 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -43,7 +43,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_IWjN0eMUAzzeH3
+      - req_JYQbXo0okeM3FW
       Stripe-Version:
       - '2014-12-08'
       Strict-Transport-Security:
@@ -52,10 +52,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_FI1MIxJKESdHHh",
+          "id": "tok_FIYMDqclthxq4O",
           "object": "token",
           "card": {
-            "id": "card_FI1MdVCEES0MDU",
+            "id": "card_FIYMgYt3vDkQve",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -72,20 +72,83 @@ http_interactions:
             "dynamic_last4": null,
             "exp_month": 12,
             "exp_year": 2025,
-            "fingerprint": "70B1BgindTYnDA3n",
+            "fingerprint": "oT8V3bNkn8zTvqib",
             "funding": "credit",
-            "last4": "4242",
+            "last4": "0002",
             "metadata": {
             },
             "name": null,
             "tokenization_method": null
           },
           "client_ip": "100.37.244.206",
-          "created": 1561041176,
+          "created": 1561163920,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Thu, 20 Jun 2019 14:32:56 GMT
+  recorded_at: Sat, 22 Jun 2019 00:38:40 GMT
+- request:
+    method: post
+    uri: https://api.stripe.com/v1/customers
+    body:
+      encoding: UTF-8
+      string: email=user3s%40bikeiasdndex.org&card=tok_FIYMDqclthxq4O
+    headers:
+      User-Agent:
+      - Stripe/v1 RubyBindings/3.3.2
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 402
+      message: Payment Required
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Sat, 22 Jun 2019 00:38:40 GMT
+      Content-Type:
+      - application/json
+      Content-Length:
+      - '241'
+      Connection:
+      - keep-alive
+      Access-Control-Allow-Credentials:
+      - 'true'
+      Access-Control-Allow-Methods:
+      - GET, POST, HEAD, OPTIONS, DELETE
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Expose-Headers:
+      - Request-Id, Stripe-Manage-Version, X-Stripe-External-Auth-Required, X-Stripe-Privileged-Session-Required
+      Access-Control-Max-Age:
+      - '300'
+      Cache-Control:
+      - no-cache, no-store
+      Request-Id:
+      - req_Ps1sxyZaWQs6Dv
+      Stripe-Version:
+      - '2014-12-08'
+      Strict-Transport-Security:
+      - max-age=31556926; includeSubDomains; preload
+    body:
+      encoding: UTF-8
+      string: |
+        {
+          "error": {
+            "code": "card_declined",
+            "decline_code": "generic_decline",
+            "doc_url": "https://stripe.com/docs/error-codes/card-declined",
+            "message": "Your card was declined.",
+            "param": "",
+            "type": "card_error"
+          }
+        }
+    http_version: 
+  recorded_at: Sat, 22 Jun 2019 00:38:40 GMT
 recorded_with: VCR 4.0.0
