--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@emotion/core": "^10.0.10",
     "@honeybadger-io/react": "^0.0.2",
     "@rails/webpacker": "^4.0.2",
-    "blueimp-file-upload": "^9.31.0",
+    "blueimp-canvas-to-blob": "^3.14.0",
+    "blueimp-file-upload": "^9.32.0",
+    "blueimp-load-image": "^2.22.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
