--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "@emotion/core": "^10.0.10",
     "@honeybadger-io/react": "^0.0.2",
     "@rails/webpacker": "^4.0.2",
-    "blueimp-canvas-to-blob": "^3.14.0",
-    "blueimp-file-upload": "^9.32.0",
-    "blueimp-load-image": "^2.22.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
     "eslint-plugin-react-hooks": "^1.6.0",
+    "filepond": "^4.4.10",
     "honeybadger-js": "^0.5.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
@@ -31,7 +29,6 @@
     "react-dom": "^16.8.5",
     "react-spinners": "^0.5.3",
     "sass": "^1.15.2",
-    "script-loader": "^0.7.2",
     "selectize": "^0.12.6"
   },
   "devDependencies": {
