--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "chartkick": "^3.0.2",
     "eslint-plugin-react-hooks": "^1.6.0",
     "filepond": "^4.4.10",
+    "filepond-plugin-file-encode": "^2.1.4",
+    "filepond-plugin-file-validate-size": "^2.1.3",
+    "filepond-plugin-file-validate-type": "^1.2.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.6",
+    "filepond-plugin-image-preview": "^4.2.1",
     "honeybadger-js": "^0.5.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
@@ -23,6 +28,9 @@
     "moment-timezone": "^0.5.23",
     "pluralize": "^7.0.0",
     "popper.js": "^1.14.4",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
     "prop-types": "^15.7.2",
     "rails-ujs": "^5.2.1",
     "react": "^16.8.5",
