--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "@emotion/core": "^10.0.10",
     "@honeybadger-io/react": "^0.0.2",
     "@rails/webpacker": "^4.0.2",
+    "@uppy/core": "^1.1.0",
+    "@uppy/dashboard": "^1.1.0",
+    "@uppy/drag-drop": "^1.1.0",
+    "@uppy/progress-bar": "^1.1.0",
+    "@uppy/tus": "^1.2.0",
+    "@uppy/xhr-upload": "^1.1.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
