--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@uppy/core": "^1.1.0",
     "@uppy/dashboard": "^1.1.0",
     "@uppy/drag-drop": "^1.1.0",
+    "@uppy/file-input": "^1.1.0",
     "@uppy/progress-bar": "^1.1.0",
     "@uppy/tus": "^1.2.0",
     "@uppy/xhr-upload": "^1.1.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
+    "es6-promise": "^4.2.8",
     "eslint-plugin-react-hooks": "^1.6.0",
     "filepond": "^4.4.10",
     "filepond-plugin-file-validate-type": "^1.2.4",
@@ -36,7 +38,8 @@
     "react-dom": "^16.8.5",
     "react-spinners": "^0.5.3",
     "sass": "^1.15.2",
-    "selectize": "^0.12.6"
+    "selectize": "^0.12.6",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
