--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
+    "core-js": "2",
     "eslint-plugin-react-hooks": "^1.6.0",
     "honeybadger-js": "^0.5.5",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
+    "jquery": "^3.4.0",
+    "lodash": "^4.17.13",
     "loglevel": "^1.6.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
