--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@uppy/dashboard": "^1.1.0",
     "@uppy/drag-drop": "^1.1.0",
     "@uppy/file-input": "^1.1.0",
+    "@uppy/form": "^1.1.0",
     "@uppy/progress-bar": "^1.1.0",
     "@uppy/tus": "^1.2.0",
     "@uppy/xhr-upload": "^1.1.0",
