--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
     "core-js": "2",
+    "es6-promise": "^4.2.8",
     "eslint-plugin-react-hooks": "^1.6.0",
     "filepond": "^4.4.10",
     "filepond-plugin-file-validate-type": "^1.2.4",
