--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -6,7 +6,7 @@ base_locale: en
 
 # All available locales are inferred from the data by default. Alternatively,
 # specify them explicitly:
-locales: [es, nl]
+# locales: [nl]
 
 # Reporting locale, default: en. Available: en, ru.
 internal_locale: en
