Externalize mailer templates
For mailers, split up text and html translations for simplicity.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -28,9 +28,7 @@ data:
   write:
     ## For example, write devise and simple form keys to their respective files:
     - ['{doorkeeper}.*', 'config/locales/\1.%{locale}.yml']
-    - ['{mailer}.*', 'config/locales/\1.%{locale}.yml']
-    ## Catch-all default:
-    # - config/locales/%{locale}.yml
+    - config/locales/%{locale}.yml
 
   # External locale data (e.g. gems).
   # This data is not considered unused and is never written to.
