siwtch asset_host to env

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ STRIPE_SECRET_KEY: sk_test_tQGLxDke5HeZD6iTD1QyVZvV
 S3_BUCKET: absent
 S3_ACCESS_KEY: absent
 S3_SECRET_KEY: absent
+ASSET_HOST: https://files.bikeindex.org
 SPARKPOST_USERNAME: absent
 SPARKPOST_PASSWORD: absent
 SPARKPOST_PORT: absent
