Add JS for new admin layout/News views (#931)
* Update structure.sql

* Revert "Update structure.sql"

This reverts commit 682e2d849574e9635530e31a71d4051b455a468f.

* commit

* index

* Update edit.html.haml

* Create blogs.js

* Update blogs.js

* public image

* update

* form

* js

* js

* Update binx_admin.js

* Update edit.html.haml

* Update _public_image.html.haml

* change to haml

* Update blogs.js

* ahh

* Fix?

* mmmm

* Update _public_image.html.erb

* Update _public_image.html.erb

* Update _public_image.html.erb

* revert

* create new partial

* revert

* revert

* Add blueimp and script-loader

* Update admin_application.js

* revert

* eh?

* working on js

* woof

* eh

* remove blueimp, add filepond

* commit

* Filepond working, drag and drop working, fixing image preview now

* I'm sure there's a better way to do this, but for now I am doing what works

* commit

* more filepond

* commit

* remove filepond

* What's uppy

* ahhhhhh

* deleter

* beep

* commit

* Heyyyyoooooo testing works

* re-add binxadminblogs to binxadmin

* eep

* spacing

* final?

* commit

* Update application_css.scss

* commit again

* add progress bar styles

* listicles js

* commit

* Error fixed/duplicates removed/scss moved to correct place

* ope

* remove listicle js

* js for toggling radio buttons

* Styling and rendering public images for admin blogs (#1061)

* styling

* commit

* commit

* commit

* commit

* working?

* new page styles

* Remove commented out html

* listicle fixing, controller changes, refactor js

* commit

* done

* commit

* indent

* commit

* remove excess line

* remove template variable, return string

* Admin custom layouts revision (#1075)

* remove excess line

* Revert "remove excess line"

This reverts commit 2cc30ed478bff00d9ff839e98b9ae2cb8231d5da.

* WIP

--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "@emotion/core": "^10.0.10",
     "@honeybadger-io/react": "^0.0.2",
     "@rails/webpacker": "^4.0.2",
+    "@uppy/core": "^1.1.0",
+    "@uppy/dashboard": "^1.1.0",
+    "@uppy/drag-drop": "^1.1.0",
+    "@uppy/file-input": "^1.1.0",
+    "@uppy/form": "^1.1.0",
+    "@uppy/progress-bar": "^1.1.0",
+    "@uppy/tus": "^1.2.0",
+    "@uppy/xhr-upload": "^1.1.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "chartkick": "^3.0.2",
     "core-js": "2",
+    "es6-promise": "^4.2.8",
     "eslint-plugin-react-hooks": "^1.6.0",
     "honeybadger-js": "^0.5.5",
     "jquery": "^3.4.0",
@@ -29,7 +38,8 @@
     "react-dom": "^16.8.5",
     "react-spinners": "^0.5.3",
     "sass": "^1.15.2",
-    "selectize": "^0.12.6"
+    "selectize": "^0.12.6",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
