--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       RACK_ENV: test
       COVERAGE: true
       DISABLE_SPRING: true
+      TRANSLATION_BRANCH: master
       TZ: /usr/share/zoneinfo/America/Chicago
 
     docker:
@@ -23,33 +24,84 @@ jobs:
       - image: redis:4.0.9
 
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "b7:01:89:de:d8:f8:77:cc:9e:5a:ca:ee:0c:24:57:13"
+
       - checkout
 
       - run:
-          name: install dockerize
+          name: Install Dockerize
           command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
           environment:
             DOCKERIZE_VERSION: v0.6.1
 
+      - restore_cache:
+          key: v2-git-2.22.0
       - run:
-          name: install system libraries
+          name: Install Git
+          environment:
+            GIT_VERSION: 2.22.0
+          command: |
+            mkdir deps-git
+            cd    deps-git
+
+            sudo apt-get update
+            sudo apt-get install libcurl4-gnutls-dev libexpat1-dev gettext libz-dev libssl-dev
+
+            wget -O git.tgz https://mirrors.edge.kernel.org/pub/software/scm/git/git-${GIT_VERSION}.tar.gz
+            tar -xzf git.tgz
+            cd git-${GIT_VERSION}
+
+            sudo make prefix=/usr/local all
+            sudo cp ./git /usr/local/bin/git
+      - save_cache:
+          key: v2-git-2.22.0
+          paths:
+            - deps-git
+
+      - restore_cache:
+          key: v2-hub-2.12.3
+      - run:
+          name: Install Hub
+          environment:
+            HUB_VERSION: 2.12.3
+          command: |
+            mkdir deps-hub
+            cd    deps-hub
+
+            wget -O hub.tgz https://github.com/github/hub/releases/download/v${HUB_VERSION}/hub-linux-amd64-${HUB_VERSION}.tgz
+            tar -xzf hub.tgz
+
+            sudo cp ./hub-linux-amd64-${HUB_VERSION}/bin/hub /usr/local/bin/hub
+      - save_cache:
+          key: v2-hub-2.12.3
+          paths:
+            - deps-hub
+
+      - run:
+          name: Install system libraries
           command: sudo apt-get update && sudo apt-get -y install imagemagick postgresql-client
 
       - run:
-          name: install bundler
+          name: Install Bundler
           command: gem install bundler
 
       # Ruby dependencies
       - restore_cache:
           key: v2-bundler-{{ checksum "Gemfile.lock" }}
       - run:
-          name: bundle gems
+          name: Bundle Gems
           command: bundle install --path=vendor/bundle --jobs=4 --retry=3
       - save_cache:
           key: v2-bundler-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
             - ~/.bundle
+
+      - run:
+          name: Sync translations (only on master by default)
+          command: bin/check_translations
 
       # Node dependencies
       - restore_cache:
@@ -135,7 +187,7 @@ jobs:
 
   upload-coverage:
     docker:
-      - image: circleci/ruby:2.5.1-stretch-node
+      - image: circleci/ruby:2.5.5-stretch-node
     environment:
       CC_TEST_REPORTER_ID: 04daa6564351115dc1515504790cd379ad8dc25e7778f0641e0f8c63185f887c
     working_directory: ~/bikeindex/bike_index
