--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       RACK_ENV: test
       COVERAGE: true
       DISABLE_SPRING: true
-      TRANSLATION_BRANCH: master
+      TRANSLATION_BRANCH: normalize-when-syncing
       TZ: /usr/share/zoneinfo/America/Chicago
 
     docker:
