Revert "Test branch"
This reverts commit 6931b576b74028e7455a2a3bf047f06ccff60af3.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       RACK_ENV: test
       COVERAGE: true
       DISABLE_SPRING: true
-      TRANSLATION_BRANCH: normalize-when-syncing
+      TRANSLATION_BRANCH: master
       TZ: /usr/share/zoneinfo/America/Chicago
 
     docker:
