--- a/.env
+++ b/.env
@@ -34,3 +34,8 @@ TWITTER_ACCESS_TOKEN: something
 TWITTER_ACCESS_SECRET: something
 ALLOWED_WRITE_ORGANIZATIONS: foo,bar
 TRANSLATION_IO_API_KEY: something
+LIVE_EXTERNAL_API_SPECS: false
+STOP_HELING_BASE_URL: something
+STOP_HELING_API_KEY: something
+STOP_HELING_APP_ID: something
+VERLOREN_OF_GEVONDEN_BASE_URL: something
