Update stolen alert twitter env vars

--- a/.env
+++ b/.env
@@ -37,3 +37,13 @@ STOP_HELING_BASE_URL: something
 STOP_HELING_API_KEY: something
 STOP_HELING_APP_ID: something
 VERLOREN_OF_GEVONDEN_BASE_URL: something
+STOLEN_ALERT_TWITTER_1_USERNAME: test
+STOLEN_ALERT_TWITTER_1_ACCESS_TOKEN: test
+STOLEN_ALERT_TWITTER_1_ACCESS_SECRET: test
+STOLEN_ALERT_TWITTER_1_CONSUMER_KEY: test
+STOLEN_ALERT_TWITTER_1_CONSUMER_SECRET: test
+STOLEN_ALERT_TWITTER_2_USERNAME: test
+STOLEN_ALERT_TWITTER_2_ACCESS_TOKEN: test
+STOLEN_ALERT_TWITTER_2_ACCESS_SECRET: test
+STOLEN_ALERT_TWITTER_2_CONSUMER_KEY: test
+STOLEN_ALERT_TWITTER_2_CONSUMER_SECRET: test
