--- a/.env
+++ b/.env
@@ -20,8 +20,6 @@ SPARKPOST_PORT: absent
 GOOGLE_MAPS: AIzaSyDH8ejgPgtdVFMB6USR8PifSL1F_AEY8Wg
 GOOGLE_MAPS_STATIC: AIzaSyDH8ejgPgtdVFMB6USR8PifSL1F_AEY8Wg
 GOOGLE_GEOCODER: AIzaSyDH8ejgPgtdVFMB6USR8PifSL1F_AEY8Wg
-STOLEN_TWITTERBOT_URL: https://bikeindex.org/bikes
-STOLEN_TWITTERBOT_KEY: SOMETHING
 NOTIFICATIONS_API_KEY: SomeSpecialThing
 ORGANIZATIONS_API_ACCESS_TOKEN: SomeOtherSpecialThinger
 AUTO_ORG_MEMBER: user@example.com
@@ -39,3 +37,13 @@ STOP_HELING_BASE_URL: something
 STOP_HELING_API_KEY: something
 STOP_HELING_APP_ID: something
 VERLOREN_OF_GEVONDEN_BASE_URL: something
+STOLEN_ALERT_TWITTER_1_USERNAME: test
+STOLEN_ALERT_TWITTER_1_ACCESS_TOKEN: test
+STOLEN_ALERT_TWITTER_1_ACCESS_SECRET: test
+STOLEN_ALERT_TWITTER_1_CONSUMER_KEY: test
+STOLEN_ALERT_TWITTER_1_CONSUMER_SECRET: test
+STOLEN_ALERT_TWITTER_2_USERNAME: test
+STOLEN_ALERT_TWITTER_2_ACCESS_TOKEN: test
+STOLEN_ALERT_TWITTER_2_ACCESS_SECRET: test
+STOLEN_ALERT_TWITTER_2_CONSUMER_KEY: test
+STOLEN_ALERT_TWITTER_2_CONSUMER_SECRET: test
