Add Project529 env vars

--- a/.env
+++ b/.env
@@ -37,6 +37,9 @@ STOP_HELING_BASE_URL: something
 STOP_HELING_API_KEY: something
 STOP_HELING_APP_ID: something
 VERLOREN_OF_GEVONDEN_BASE_URL: something
+PROJECT_529_APP_ID: something
+PROJECT_529_ACCESS_TOKEN: something
+PROJECT_529_REFRESH_TOKEN: something
 STOLEN_ALERT_TWITTER_1_USERNAME: test
 STOLEN_ALERT_TWITTER_1_ACCESS_TOKEN: test
 STOLEN_ALERT_TWITTER_1_ACCESS_SECRET: test
