--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.5",
     "babel-preset-airbnb": "2.6.0",
+    "caniuse-lite": "^1.0.30000697",
     "cypress": "^3.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -73,12 +74,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "ignore-loader": "^0.1.2",
-    "jest": "^24.5.0",
+    "jest": "^24.9.0",
     "jest-json": "^1.0.2",
     "jest-junit": "^6.3.0",
     "postcss-cssnext": "^3.1.0",
     "react-testing-library": "^6.0.4",
-    "webpack-cli": "^3.3.0",
+    "terser-webpack-plugin": "^2.3.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
   }
 }
