--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "jest": "^24.9.0",
     "jest-json": "^1.0.2",
     "jest-junit": "^6.3.0",
+    "jest-worker": "^24.9.0",
     "postcss-cssnext": "^3.1.0",
     "react-testing-library": "^6.0.4",
     "terser-webpack-plugin": "^2.3.2",
